<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">电影购票助手</string>
    <string name="prompt_login_user_phone">用户名/手机号</string>
    <string name="prompt_login_password">密码</string>
    <string name="prompt_login_captcha">验证码</string>
    <string name="action_login">登录</string>
    <string name="prompt_register_user">用户名</string>
    <string name="prompt_register_phone">手机号</string>
    <string name="prompt_register_password">密码</string>
    <string name="prompt_register_password_confirm">确认密码</string>
    <string name="prompt_register_captcha">验证码</string>
    <string name="prompt_register_verify">短信验证码</string>
    <string name="action_verify">获取验证码</string>
    <string name="action_register">注册</string>
    <string name="action_buy_ticket">确认选座</string>
    <string name="prompt_pay_password">密码</string>
    <string name="action_pay_cancel">取消</string>
    <string name="action_pay_confirm">确认</string>
    <string name="navigation_suggest">推荐</string>
    <string name="navigation_movie">电影</string>
    <string name="navigation_cinema">影院</string>
    <string name="navigation_user">个人</string>
    <string name="prompt_user_log">请登录</string>
    <string name="user_login_button">登录/注册</string>
    <string name="user_logout_button">注销</string>
</resources>
