<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_register_user"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_register_phone"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_register_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_register_password_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/register_captcha_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_captcha_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_register_captcha"
                android:inputType="text"
                android:maxLines="1"
                android:layout_weight="1" />

            <WebView
                android:id="@+id/register_captcha_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/register_captcha_refresh"
                android:layout_width="@dimen/refresh_button_size"
                android:layout_height="@dimen/refresh_button_size"
                android:background="@drawable/refresh" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_verify_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_verify_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_register_verify"
                android:inputType="text"
                android:maxLines="1"
                android:layout_weight="1" />

            <Button
                android:id="@+id/register_verify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_verify"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_register" />

    </LinearLayout>

</LinearLayout>