<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/pay_money"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="共计：xx元"
        android:textSize="@dimen/buy_ticket_fontsize" />

    <EditText
        android:id="@+id/pay_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_pay_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pay_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_pay_cancel"
            android:layout_weight="1" />

        <Button
            android:id="@+id/pay_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_pay_confirm"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>